--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<!--    Defining color set-->
+    <!--    Defining color set-->
     <color name="black">#FF000000</color>
     <color name="grey">#808080</color>
     <color name="darkGrey">#606060</color>
@@ -31,22 +31,22 @@
     <color name="blue5">#515185</color>
     <color name="blue6">#414161</color>
     <color name="blue7">#31313f</color>
-    <color name="blue8">#1f1f24</color>
+    <color name="blue8">#000033</color>
     <color name="blue8Transparent">#200e0e0f</color>
-    <color name="blue9">#0e0e0f</color>
+    <color name="blue9">#00001a</color>
 
     <color name="red1">#fadbcf</color>
     <color name="red2">#f0b49e</color>
-    <color name="red3">#de8d6f</color>
+    <color name="red3">#f57546</color>
     <color name="red4">#c46847</color>
     <color name="red5">#a34726</color>
-    <color name="red6">#802e11</color>
+    <color name="red6">#8a2b09</color>
     <color name="red7">#571b05</color>
     <color name="red8">#2b0c01</color>
 
-    <color name="colorAccent">@color/textColor</color>
+    <!--    Defining light theme colors-->
+    <color name="colorAccent">@color/red5</color>
 
-<!--    Defining light theme colors-->
     <color name="grey1">@color/darkGrey</color>
     <color name="grey2">@color/lightGrey</color>
 
@@ -81,5 +81,10 @@
 
     <color name="coinColor">@color/golden</color>
     <color name="tokenColor">@color/darkGrey</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
+    <color name="light_blue_A200">#FF40C4FF</color>
+    <color name="light_blue_A400">#FF00B0FF</color>
+    <color name="black_overlay">#66000000</color>
 
 </resources>
