--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -9,40 +9,71 @@
     android:padding="@dimen/medium_padding"
     tools:context=".views.fragments.ChartFragment">
 
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    <LinearLayout
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/symbol"
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="60dp"
+            android:layout_height="60dp" />
+
+        <TextView
+            android:id="@+id/symbol"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:textSize="@dimen/big_text"
+            android:textStyle="bold"
+            tools:text="Symbol" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/binance_link"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@+id/logo"
-        app:layout_constraintTop_toTopOf="@+id/logo"
-        app:layout_constraintBottom_toBottomOf="@+id/logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:paddingStart="@dimen/big_padding"
-        android:textSize="@dimen/big_text"
-        android:textStyle="bold"
-        tools:text="Symbol" />
+        android:padding="@dimen/bigger_padding"
+        android:gravity="center_vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header">
+
+        <ImageView
+            android:id="@+id/binance_logo"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/binance_logo" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/medium_text"
+            android:paddingStart="@dimen/medium_padding"
+            android:text="Binance market data and chart" />
+
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/price_stat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="@dimen/medium_padding"
-        app:layout_constraintTop_toBottomOf="@+id/logo">
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/binance_link">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="20"
-            android:padding="@dimen/small_padding"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="@dimen/small_padding">
 
             <TextView
                 android:id="@+id/price_text"
@@ -50,9 +81,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:maxLines="1"
+                android:text="Price:"
                 android:textAlignment="viewEnd"
-                android:textSize="@dimen/medium_text"
-                android:text="Price:" />
+                android:textSize="@dimen/medium_text" />
 
             <TextView
                 android:id="@+id/ath_text"
@@ -70,8 +101,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="30"
-            android:padding="@dimen/small_padding"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="@dimen/small_padding">
 
             <TextView
                 android:id="@+id/price"
@@ -100,26 +131,26 @@
             android:layout_height="wrap_content"
             android:layout_weight="20"
             android:gravity="end"
-            android:padding="@dimen/small_padding"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="@dimen/small_padding">
 
             <TextView
                 android:id="@+id/vol_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
+                android:text="Vol:"
                 android:textAlignment="viewEnd"
-                android:textSize="@dimen/medium_text"
-                android:text="Vol:" />
+                android:textSize="@dimen/medium_text" />
 
             <TextView
                 android:id="@+id/mcap_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
+                android:text="MCap:"
                 android:textAlignment="viewStart"
-                android:textSize="@dimen/medium_text"
-                android:text="MCap:" />
+                android:textSize="@dimen/medium_text" />
 
         </LinearLayout>
 
@@ -127,8 +158,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="30"
-            android:padding="@dimen/small_padding"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="@dimen/small_padding">
 
             <TextView
                 android:id="@+id/volume"
@@ -370,8 +401,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/medium_padding"
-        android:padding="@dimen/min_padding"
         android:orientation="horizontal"
+        android:padding="@dimen/min_padding"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintTop_toBottomOf="@+id/changes">
 
@@ -382,13 +413,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_margin="@dimen/min_padding"
+            android:layout_weight="1"
             android:background="@drawable/rounded_rectangle_base"
             android:gravity="center"
             android:padding="@dimen/min_padding"
             android:text="1w"
             android:textSize="@dimen/medium_text"
             app:layout_constraintDimensionRatio="1:1"
-            android:layout_weight="1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -398,12 +429,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_margin="@dimen/min_padding"
+            android:layout_weight="1"
             android:background="@drawable/rounded_rectangle_base"
             android:gravity="center"
             android:padding="@dimen/min_padding"
             android:text="1m"
             android:textSize="@dimen/medium_text"
-            android:layout_weight="1"
             app:layout_constraintStart_toEndOf="@+id/d7"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -413,12 +444,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_margin="@dimen/min_padding"
+            android:layout_weight="1"
             android:background="@drawable/rounded_rectangle_base"
             android:gravity="center"
             android:padding="@dimen/min_padding"
             android:text="3m"
             android:textSize="@dimen/medium_text"
-            android:layout_weight="1"
             app:layout_constraintStart_toEndOf="@+id/m1"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -428,12 +459,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_margin="@dimen/min_padding"
+            android:layout_weight="1"
             android:background="@drawable/rounded_rectangle_base"
             android:gravity="center"
             android:padding="@dimen/min_padding"
             android:text="6m"
             android:textSize="@dimen/medium_text"
-            android:layout_weight="1"
             app:layout_constraintStart_toEndOf="@+id/m3"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -443,12 +474,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_margin="@dimen/min_padding"
+            android:layout_weight="1"
             android:background="@drawable/rounded_rectangle_base"
             android:gravity="center"
             android:padding="@dimen/min_padding"
             android:text="YTD"
             android:textSize="@dimen/medium_text"
-            android:layout_weight="1"
             app:layout_constraintStart_toEndOf="@+id/m6"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -458,12 +489,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_margin="@dimen/min_padding"
+            android:layout_weight="1"
             android:background="@drawable/rounded_rectangle_base"
             android:gravity="center"
             android:padding="@dimen/min_padding"
             android:text="Y"
             android:textSize="@dimen/medium_text"
-            android:layout_weight="1"
             app:layout_constraintStart_toEndOf="@+id/ytd"
             app:layout_constraintTop_toTopOf="parent" />
 
