--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -35,19 +35,30 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/binance_link"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/bigger_padding"
-        android:gravity="center_vertical"
+        android:layout_margin="@dimen/min_padding"
+        app:cardCornerRadius="@dimen/corner_radius"
+        app:cardElevation="@dimen/card_elevation"
+        app:contentPadding="@dimen/small_padding"
+        android:layout_marginBottom="@dimen/medium_padding"
+        app:cardBackgroundColor="@color/base3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header">
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/binance_logo"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:importantForAccessibility="no"
             android:src="@drawable/binance_logo" />
 
         <TextView
@@ -55,10 +66,11 @@
             android:layout_height="wrap_content"
             android:textSize="@dimen/medium_text"
             android:paddingStart="@dimen/medium_padding"
-            android:text="Binance market data and chart" />
+            android:text="@string/binance_market_data_and_chart" />
 
 
     </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 
     <LinearLayout
         android:id="@+id/price_stat"
@@ -81,7 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:maxLines="1"
-                android:text="Price:"
+                android:text="@string/price"
                 android:textAlignment="viewEnd"
                 android:textSize="@dimen/medium_text" />
 
@@ -91,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:maxLines="1"
-                android:text="ATH:"
+                android:text="@string/ath"
                 android:textAlignment="viewEnd"
                 android:textSize="@dimen/medium_text" />
 
@@ -139,7 +151,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
-                android:text="Vol:"
+                android:text="@string/volume"
                 android:textAlignment="viewEnd"
                 android:textSize="@dimen/medium_text" />
 
@@ -148,7 +160,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
-                android:text="MCap:"
+                android:text="@string/mcap"
                 android:textAlignment="viewStart"
                 android:textSize="@dimen/medium_text" />
 
