--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -26,8 +26,8 @@
                 android:paddingTop="@dimen/medium_padding"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:textSize="@dimen/big_text"
-                android:text="Sentiment summary"
+                android:textSize="@dimen/medium_text"
+                android:text="@string/tokenmetrics_summary"
                 android:layout_margin="@dimen/medium_padding"/>
 
             <TextView
@@ -38,7 +38,7 @@
                 android:paddingTop="@dimen/medium_padding"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:textSize="@dimen/big_text"
+                android:textSize="@dimen/medium_text"
                 tools:text="Date"
                 android:layout_margin="@dimen/medium_padding" />
 
@@ -57,8 +57,8 @@
                 android:maxLines="1"
                 app:layout_constraintTop_toBottomOf="@+id/line"
                 app:layout_constraintStart_toStartOf="parent"
-                android:textSize="@dimen/big_text"
-                android:text="Market sentiment grade:"
+                android:textSize="@dimen/medium_text"
+                android:text="@string/market_sentiment_grade"
                 android:layout_margin="@dimen/medium_padding"/>
 
             <TextView
@@ -68,7 +68,7 @@
                 android:maxLines="1"
                 app:layout_constraintTop_toBottomOf="@+id/line"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:textSize="@dimen/big_text"
+                android:textSize="@dimen/medium_text"
                 tools:text="Market"
                 android:layout_margin="@dimen/medium_padding" />
 
@@ -90,8 +90,8 @@
                 android:maxLines="1"
                 app:layout_constraintTop_toBottomOf="@+id/market_sentiment_label"
                 app:layout_constraintStart_toStartOf="parent"
-                android:textSize="@dimen/big_text"
-                android:text="News sentiment grade:"
+                android:textSize="@dimen/medium_text"
+                android:text="@string/news_sentiment_grade"
                 android:layout_margin="@dimen/medium_padding"/>
 
             <TextView
@@ -101,7 +101,7 @@
                 android:maxLines="1"
                 app:layout_constraintTop_toBottomOf="@+id/market_sentiment_label"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:textSize="@dimen/big_text"
+                android:textSize="@dimen/medium_text"
                 tools:text="News"
                 android:layout_margin="@dimen/medium_padding" />
 
@@ -116,14 +116,15 @@
                 android:paddingEnd="@dimen/medium_padding"
                 tools:text="label" />
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/news_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/medium_padding"
-                app:cardCornerRadius="@dimen/medium_padding"
-                app:cardElevation="@dimen/medium_padding"
+                app:cardCornerRadius="@dimen/corner_radius"
+                app:cardElevation="@dimen/card_elevation"
                 app:contentPadding="@dimen/medium_padding"
+                app:cardBackgroundColor="@color/base3"
                 app:layout_constraintTop_toBottomOf="@+id/news_sentiment_label">
 
                 <LinearLayout
@@ -150,7 +151,7 @@
                         android:textSize="@dimen/medium_text"
                         android:visibility="gone" />
                 </LinearLayout>
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
             <TextView
                 android:id="@+id/reddit_sentiment_header"
@@ -159,8 +160,8 @@
                 android:maxLines="1"
                 app:layout_constraintTop_toBottomOf="@+id/news_container"
                 app:layout_constraintStart_toStartOf="parent"
-                android:textSize="@dimen/big_text"
-                android:text="Reddit sentiment grade:"
+                android:textSize="@dimen/medium_text"
+                android:text="@string/reddit_sentiment_grade"
                 android:layout_margin="@dimen/medium_padding"/>
 
             <TextView
@@ -170,7 +171,7 @@
                 android:maxLines="1"
                 app:layout_constraintTop_toBottomOf="@+id/news_container"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:textSize="@dimen/big_text"
+                android:textSize="@dimen/medium_text"
                 tools:text="Reddit"
                 android:layout_margin="@dimen/medium_padding" />
 
@@ -185,14 +186,15 @@
                 android:paddingEnd="@dimen/medium_padding"
                 tools:text="label" />
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/reddit_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/medium_padding"
-                app:cardCornerRadius="@dimen/medium_padding"
-                app:cardElevation="@dimen/medium_padding"
+                app:cardCornerRadius="@dimen/corner_radius"
+                app:cardElevation="@dimen/card_elevation"
                 app:contentPadding="@dimen/medium_padding"
+                app:cardBackgroundColor="@color/base3"
                 app:layout_constraintTop_toBottomOf="@+id/reddit_sentiment_label">
 
                 <LinearLayout
@@ -218,7 +220,7 @@
                         android:textSize="@dimen/medium_text"
                         android:visibility="gone" />
                 </LinearLayout>
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
             <TextView
                 android:id="@+id/twitter_sentiment_header"
@@ -227,8 +229,8 @@
                 android:maxLines="1"
                 app:layout_constraintTop_toBottomOf="@+id/reddit_container"
                 app:layout_constraintStart_toStartOf="parent"
-                android:textSize="@dimen/big_text"
-                android:text="Twitter sentiment grade:"
+                android:textSize="@dimen/medium_text"
+                android:text="@string/twitter_sentiment_grade"
                 android:layout_margin="@dimen/medium_padding"/>
 
             <TextView
@@ -238,7 +240,7 @@
                 android:maxLines="1"
                 app:layout_constraintTop_toBottomOf="@+id/reddit_container"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:textSize="@dimen/big_text"
+                android:textSize="@dimen/medium_text"
                 tools:text="Twitter"
                 android:layout_margin="@dimen/medium_padding" />
 
@@ -253,14 +255,15 @@
                 android:paddingEnd="@dimen/medium_padding"
                 tools:text="label" />
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/twitter_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/medium_padding"
-                app:cardCornerRadius="@dimen/medium_padding"
-                app:cardElevation="@dimen/medium_padding"
+                app:cardCornerRadius="@dimen/corner_radius"
+                app:cardElevation="@dimen/card_elevation"
                 app:contentPadding="@dimen/medium_padding"
+                app:cardBackgroundColor="@color/base3"
                 android:layout_marginBottom="@dimen/big_padding"
                 app:layout_constraintTop_toBottomOf="@+id/twitter_sentiment_label">
 
@@ -287,7 +290,7 @@
                         android:textSize="@dimen/medium_text"
                         android:visibility="gone" />
                 </LinearLayout>
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
             <View
                 android:layout_marginTop="@dimen/medium_padding"
@@ -332,7 +335,7 @@
                 android:background="@drawable/rounded_rectangle_base"
                 android:gravity="center"
                 android:padding="@dimen/min_padding"
-                android:text="1h"
+                android:text="@string/_1h"
                 android:textSize="@dimen/medium_text"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintStart_toStartOf="parent"
@@ -348,7 +351,7 @@
                 android:background="@drawable/rounded_rectangle_base"
                 android:gravity="center"
                 android:padding="@dimen/min_padding"
-                android:text="1d"
+                android:text="@string/_1d"
                 android:textSize="@dimen/medium_text"
                 app:layout_constraintStart_toEndOf="@+id/sorting_h1"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -363,7 +366,7 @@
                 android:background="@drawable/rounded_rectangle_base"
                 android:gravity="center"
                 android:padding="@dimen/min_padding"
-                android:text="1w"
+                android:text="@string/_1w"
                 android:textSize="@dimen/medium_text"
                 app:layout_constraintStart_toEndOf="@+id/sorting_d1"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -378,7 +381,7 @@
                 android:background="@drawable/rounded_rectangle_base"
                 android:gravity="center"
                 android:padding="@dimen/min_padding"
-                android:text="1m"
+                android:text="@string/_1m"
                 android:textSize="@dimen/medium_text"
                 app:layout_constraintStart_toEndOf="@+id/sorting_w1"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -393,7 +396,7 @@
                 android:background="@drawable/rounded_rectangle_base"
                 android:gravity="center"
                 android:padding="@dimen/min_padding"
-                android:text="1y"
+                android:text="@string/_1y"
                 android:textSize="@dimen/medium_text"
                 app:layout_constraintStart_toEndOf="@+id/sorting_m1"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -408,7 +411,7 @@
                 android:background="@drawable/rounded_rectangle_base"
                 android:gravity="center"
                 android:padding="@dimen/min_padding"
-                android:text="ATH"
+                android:text="@string/ath"
                 android:textSize="@dimen/medium_text"
                 app:layout_constraintStart_toEndOf="@+id/sorting_y1"
                 app:layout_constraintTop_toTopOf="parent" />
