--- a/app/src/main/res/layout/spinner_text_item.xml
+++ b/app/src/main/res/layout/spinner_text_item.xml
@@ -10,4 +10,5 @@
     android:textAlignment="viewEnd"
     android:textSize="@dimen/medium_text"
     android:padding="@dimen/small_padding"
+    android:paddingEnd="@dimen/big_padding"
     />
