--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -72,6 +72,7 @@
 
     <color name="green">@color/darkGreen</color>
     <color name="red">@color/darkRed</color>
+    <color name="blue">@color/light_blue_A200</color>
 
     <color name="iconColor">@color/base8</color>
     <color name="iconColor2">@color/base6</color>
@@ -81,10 +82,12 @@
 
     <color name="coinColor">@color/golden</color>
     <color name="tokenColor">@color/darkGrey</color>
+
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
     <color name="light_blue_A200">#FF40C4FF</color>
     <color name="light_blue_A400">#FF00B0FF</color>
+
     <color name="black_overlay">#66000000</color>
 
 </resources>
